// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popover should pass additional props to portaled element 1`] = `
<span>
  <div
    class="components-popover components-animate__appear is-from-left is-from-top"
    role="tooltip"
    style="position: absolute;"
    tabindex="-1"
  >
    <div
      class="components-popover__content"
    >
      Hello
    </div>
  </div>
</span>
`;

exports[`Popover should render content 1`] = `
<span>
  <div
    class="components-popover components-animate__appear is-from-left is-from-top"
    style="position: absolute;"
    tabindex="-1"
  >
    <div
      class="components-popover__content"
    >
      Hello
    </div>
  </div>
</span>
`;
